<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="@dimen/min_touch_target"
                android:layout_height="@dimen/min_touch_target"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_back"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/color_text_primary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xs"
                android:layout_weight="1"
                android:text="@string/about_title"
                android:textAppearance="@style/TextAppearance.PhoneDoctor.Title" />
        </LinearLayout>

        <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_xl"
            android:contentDescription="@string/cd_logo"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.PhoneDoctor.Headline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_tagline"
            android:textAppearance="@style/TextAppearance.PhoneDoctor.Body" />

        <TextView
            android:id="@+id/textVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_xs"
            android:textAppearance="@style/TextAppearance.PhoneDoctor.Caption"
            tools:text="Version 1.0.0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/about_description"
            android:textAppearance="@style/TextAppearance.PhoneDoctor.Body" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:gravity="center"
            android:text="@string/about_developer"
            android:textAppearance="@style/TextAppearance.PhoneDoctor.Caption" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
